feat: wallet connect

--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@usedapp/core": "^1.2.2",
+    "@types/qrcode": "^1.5.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.7",
     "next": "^13.0.3",
+    "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "use-intersection": "^0.2.1",
+    "web3modal": "^1.9.9",
     "zod": "^3.19.1"
   },
   "devDependencies": {
