feat: setup firebase

--- a/package.json
+++ b/package.json
@@ -7,34 +7,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT",
+    "export": "next export",
+    "start": "next start",
     "lint": "gts lint './**/*.tsx' './**/*.ts'",
     "format": "run-p -l format:*",
     "format:prettier": "prettier --config ./.prettierrc.js --write '**/*.+(ts|tsx|js|md|json)'",
     "format:ts": "yarn gts fix '**/*.tsx' '**/*.ts'"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@types/qrcode": "^1.5.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
+    "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "framer-motion": "^7.6.7",
     "next": "^13.0.3",
     "qrcode": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "use-intersection": "^0.2.1",
     "web3modal": "^1.9.9",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
