--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:ts": "yarn gts fix '**/*.tsx' '**/*.ts'"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.12",
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
